# gemini-tg-assistent

./: .env.example  Cargo.toml  README.md  ROADMAP.md
src/: db.rs  gemini.rs  handler.rs  main.rs  models.rs
src/db/: requests.rs  schema.sql  sqlite.rs
src/gemini/: chatter-prompt.md
