[package]
name = "gemini-tg-assistent"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
